--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
     <!-- Contact Section -->
     <section id="contact" class="position-relative section">
         <div class="container text-center">
-            <h6 class="subtitle">Contact</h6>
-            <h6 class="section-title mb-4">Get In Touch With Me</h6>
+            <h6 class="subtitle">Contatos</h6>
+            <h6 class="section-title mb-4">Entre Em Contato Comigo</h6>
             <p class="mb-5 pb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In alias dignissimos. <br> rerum commodi corrupti, temporibus non quam.</p>
 
             <div class="contact text-left">
